footer, header, and post changes

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -14,10 +14,10 @@
       <h1 class="post__title">Do what you can, with what you have, where you are</h1>
       <div class="post__meta">
         <a href="/about/" class="post__author-image">
-          <img class="lazy" data-src="/assets/img/01-1.jpg" alt="Camelia Mendes">
+          <img class="lazy" data-src="/assets/img/01-1a.jpg" alt="Chris Anderson">
         </a>
         <div class="post__meta-bottom">
-          <a class="post__author" href="/about/">Camelia Mendes</a>
+          <a class="post__author" href="/about/">Chris Anderson</a>
           <time class="post__date" datetime="2020-11-12T12:01:35+00:00">12 Nov 2020</time>
         </div>
       </div>
