--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,9 +5,9 @@
                 <div class="col col-5 col-d-12">
                     <div class="footer__author">
                         <div class="footer__author-avatar">
-                            <img class="lazy" data-src="/assets/img/01-1.jpg" alt="Camelia Mendes">
+                            <img class="lazy" data-src="/assets/img/01-1a.jpg" alt="Chris Anderson">
                         </div>
-                        <h3 class="footer__author-name">Camelia Mendes</h3>
+                        <h3 class="footer__author-name">Chris Anderson</h3>
                         <p class="footer__author-bio">Designs, talks, and writes about web, ethics, privacy, and
                             dev. I share design tutorials, free resources and inspiration.</p>
                         <div class="social">
@@ -80,8 +80,7 @@
             <div class="row">
                 <div class="col col-12">
                     <div class="footer__info-box">
-                        <div class="copyright">2023 &copy; <a href="/">Menca</a>. Crafted & Designed by <a
-                                href="https://jekyllthemes.io/developers/artem-sheludko">Artem Sheludko</a>.</div>
+                        <div class="copyright">2023 &copy; <a href="/">chrisanderson.co</a></div>
                         <div class="top" title="Top"><i class="ion ion-ios-arrow-up"></i></div>
                     </div>
                 </div>
