--- a/_includes/postvideo.html
+++ b/_includes/postvideo.html
@@ -18,7 +18,7 @@
       <h1 class="post__title">{{ page.title }}</h1>
       <div class="post__meta">
         <a href="/about/" class="post__author-image">
-          <img class="lazy" data-src="/images/01-1.jpg" alt="Camelia Mendes">
+          <img class="lazy" data-src="/images/01-1a.jpg" alt="Chris Anderson">
         </a>
         <div class="post__meta-bottom">
           <a class="post__author" href="/about/">{{ page.author }}</a>
