--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <div class="header__inner col col-12">
                 <div class="logo">
                     <a class="logo__link" href="/">
-                        
+                        Chris Anderson
                     </a>
                 </div>
                 <nav class="main-nav">
