--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -85,11 +85,9 @@ layout: default
           </div>
       </div>
   </div>
-
-
   
     <!-- begin related posts -->
-    <div class="container">
+    <!-- <div class="container">
       <section class="related-posts is-related animate">
         <div class="row">
           <div class="col col-12">
@@ -173,13 +171,13 @@ layout: default
           </div>
         </div>
       </section>
-    </div>
+    </div> -->
     <!-- end related posts -->
     <div class="container">
       <div class="row">
         <div class="col col-12">
           <!-- begin comments -->
-          <div class="show-comments">
+          <!-- <div class="show-comments">
             <button class="button disqus-button" id="show-comments-button" onclick="disqus();return false;">Show
               Comments</button>
           </div>
@@ -209,7 +207,7 @@ layout: default
           </script>
           <noscript>Please enable JavaScript to view the
             <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-          </noscript>
+          </noscript> -->
           <!-- end comments -->
         </div>
       </div>
