--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -87,91 +87,105 @@ layout: default
   </div>
   
     <!-- begin related posts -->
-    <!-- <div class="container">
+    <div class="container">
       <section class="related-posts is-related animate">
         <div class="row">
           <div class="col col-12">
             <div class="container__inner">
               <div class="section__info">
                 <div class="section__head">
-                  <h2 class="section__title">You may also like</h2>
+                  <h2 class="section__title">Related posts</h2>
                   <a class="section__link" href="/blog">
-                    <a href="/tags#workflow" class="section__link related-tag">See all<span> workflow</span></a>
+
+                    {% if page.tags.size > 0 %}
+                    {% for tag in page.tags %}
+                      <a href="/tags#{{ tag }}" class="section__link related-tag">See all <span>{{ tag }}</span></a>
+                    {% endfor %}
+                  {% endif %}
+<!-- 
+                    <a href="/tags#workflow" class="section__link related-tag">See all<span> workflow</span></a> -->
                   </a>
                 </div>
               </div>
               <div class="row">
-                <div class="article col col-4 col-d-6 col-t-12">
-                  <div class="article__inner">
-                    <div class="article__head">
-                      <time class="article__date" datetime="2020-11-10T12:01:35+00:00">10 Nov 2020</time>
-                      <a class="article__image" href="/strive-not-to-be-a-success-but-rather-to-be-of-value">
-                        <img class="lazy" data-src="/assets/img//09.jpg"
-                          alt="Strive not to be a success, but rather to be of value">
-                      </a>
-                    </div>
-                    <div class="article__content">
-                      <h2 class="article__title">
-                        <a href="/strive-not-to-be-a-success-but-rather-to-be-of-value">Strive not to be a success, but
-                          rather to be of value</a>
-                      </h2>
-                      <p class="article__excerpt">Leverage agile frameworks to provide a robust synopsis for high level
-                        overviews. Iterative a...</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="article col col-4 col-d-6 col-t-12">
-                  <div class="article__inner">
-                    <div class="article__head">
-                      <time class="article__date" datetime="2020-11-07T12:01:35+00:00">07 Nov 2020</time>
-                      <a class="article__image" href="/what-you-do-speaks-so-loudly-that-I-cannot-hear-what-you-say">
-                        <img class="lazy" data-src="/assets/img/08.jpg"
-                          alt="What you do speaks so loudly that I cannot hear what you say">
-                      </a>
-                    </div>
-                    <div class="article__content">
-                      <h2 class="article__title">
-                        <a href="/what-you-do-speaks-so-loudly-that-I-cannot-hear-what-you-say">What you do speaks so
-                          loudly that I cannot hear what you say</a>
-                      </h2>
-                      <p class="article__excerpt">Leverage agile frameworks to provide a robust synopsis for high level
-                        overviews. Iterative a...</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="article col col-4 col-d-6 col-t-12">
-                  <div class="article__inner">
-                    <div class="article__head">
-                      <time class="article__date" datetime="2020-11-06T12:01:35+00:00">06 Nov 2020</time>
-                      <div class="video-icon">
-                        <div class="circle pulse"></div>
-                        <div class="circle">
-                          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-                            <polygon points="40,30 65,50 40,70"></polygon>
-                          </svg>
+
+
+
+                {% assign maxRelated = 3 %}
+                {% assign minCommonTags =  1 %}
+                {% assign maxRelatedCounter = 0 %}
+              
+              
+                {% for post in site.posts %}
+              
+              
+                  {% assign sameTagCount = 0 %}
+                  {% assign commonTags = '' %}
+              
+                  {% for tag in post.tags %}
+                    {% if post.url != page.url %}
+                      {% if page.tags contains tag %}
+                        {% assign sameTagCount = sameTagCount | plus: 1 %}
+                        {% capture tagmarkup %} <span class="label label-default">{{ tag }}</span> {% endcapture %}
+                        {% assign commonTags = commonTags | append: tagmarkup %}
+                      {% endif %}
+                    {% endif %}
+                  {% endfor %}
+              
+                  {% if sameTagCount >= minCommonTags %}
+              
+                  <div class="article col col-4 col-d-6 col-t-12">
+                    <div class="article__inner">
+                        <div class="article__head">
+                            <time class="article__date" datetime="{{ post.date }}">{{ post.date | date_to_string }}</time>
+                            
+                            {% if post.video %}
+        
+                            <div class="video-icon">
+                                <div class="circle pulse"></div>
+                                <div class="circle">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+                                        <polygon points="40,30 65,50 40,70"></polygon>
+                                    </svg>
+                                </div>
+                            </div>
+        
+                            {% endif %}
+        
+                            
+                            <a class="article__image" href="{{ post.url }}">
+                                <img class="lazy" data-src="{{ post.thumbnail-img }}"
+                                    alt="That which does not kill us makes us stronger">
+                            </a>
                         </div>
-                      </div>
-                      <a class="article__image" href="/you-must-be-the-change-you-wish-to-see-in-the-world">
-                        <img class="lazy" data-src="/assets/img/05.jpg"
-                          alt="You must be the change you wish to see in the world">
-                      </a>
+                        <div class="article__content">
+                            <h2 class="article__title">
+                                <a href="{{ post.url }}">{{ post.title }}</a>
+                            </h2>
+                            <p class="article__excerpt">{{ post.excerpt | truncatewords: 15 }}</p>
+                        </div>
                     </div>
-                    <div class="article__content">
-                      <h2 class="article__title">
-                        <a href="/you-must-be-the-change-you-wish-to-see-in-the-world">You must be the change you wish to
-                          see in the world</a>
-                      </h2>
-                      <p class="article__excerpt">Leverage agile frameworks to provide a robust synopsis for high level
-                        overviews. Iterative a...</p>
-                    </div>
-                  </div>
                 </div>
+              
+                    {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
+                    {% if maxRelatedCounter >= maxRelated %}
+                      {% break %}
+                    {% endif %}
+                  {% endif %}
+                {% endfor %}                
+
+
+
+           
+
+
+
               </div>
             </div>
           </div>
         </div>
       </section>
-    </div> -->
+    </div>
     <!-- end related posts -->
     <div class="container">
       <div class="row">
