--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,31 +8,23 @@
                             <img class="lazy" data-src="/assets/img/01-1a.jpg" alt="Chris Anderson">
                         </div>
                         <h3 class="footer__author-name">Chris Anderson</h3>
-                        <p class="footer__author-bio">Designs, talks, and writes about web, ethics, privacy, and
-                            dev. I share design tutorials, free resources and inspiration.</p>
+                        <p class="footer__author-bio">Codes, talks, and writes about software engineering. I share free coding tutorials, code snippets, and how to get started in coding.</p>
                         <div class="social">
-                            <ul class="social__list list-reset">
-                                <li class="social__item">
-                                    <a class="social__link" href="https://twitter.com" target="_blank" rel="noopener"
-                                        aria-label=" link"><i class="ion ion-logo-twitter"></i></a>
-                                </li>
-                                <li class="social__item">
-                                    <a class="social__link" href="https://facebook.com" target="_blank" rel="noopener"
-                                        aria-label=" link"><i class="ion ion-logo-facebook"></i></a>
-                                </li>
+                            <ul class="social__list list-reset">                            
                                 <li class="social__item">
                                     <a class="social__link" href="https://instagram.com" target="_blank" rel="noopener"
-                                        aria-label=" link"><i class="ion ion-logo-instagram"></i></a>
-                                </li>
-                                <li class="social__item">
-                                    <a class="social__link" href="https://pinterest.com" target="_blank" rel="noopener"
-                                        aria-label=" link"><i class="ion ion-logo-pinterest"></i></a>
+                                        aria-label=" link"><ion-icon name="logo-instagram"></ion-icon></i></a>
                                 </li>
                                 <li class="social__item">
                                     <a class="social__link" href="https://youtube.com" target="_blank" rel="noopener"
-                                        aria-label=" link"><i class="ion ion-logo-youtube"></i></a>
+                                        aria-label=" link"><ion-icon name="logo-youtube"></ion-icon></a>
+                                </li>
+                                <li class="social__item">
+                                    <a class="social__link" href="https://tiktok.com" target="_blank" rel="noopener"
+                                        aria-label=" link"><ion-icon name="logo-tiktok"></ion-icon></a>
                                 </li>
                             </ul>
+
                         </div>
                     </div>
                 </div>
