--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,12 +20,12 @@
                             <li class="nav__item">
                                 <a href="/about/" class="nav__link">About</a>
                             </li>
-                            <li class="nav__item">
+                            <!-- <li class="nav__item">
                                 <a href="/contact/" class="nav__link">Contact</a>
                             </li>
                             <li class="nav__item">
                                 <a href="/elements/" class="nav__link">Elements</a>
-                            </li>
+                            </li> -->
                             <li class="nav__item">
                                 <a href="/blog/" class="nav__link">Blog</a>
                             </li>
