--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,5 +12,7 @@
 
     <script src="/assets/js/scripts.js"></script>
     <script src="/assets/js/common.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
