--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
                             <img class="lazy" data-src="/assets/img/01-1a.jpg" alt="Chris Anderson">
                         </div>
                         <h3 class="footer__author-name">Chris Anderson</h3>
-                        <p class="footer__author-bio">Codes, talks, and writes about software engineering. I share free coding tutorials, code snippets, and how to get started in coding.</p>
+                        <p class="footer__author-bio">I share free coding tutorials, code snippets, and how to get started in coding.</p>
                         <div class="social">
                             <ul class="social__list list-reset">                            
                                 <li class="social__item">
