--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col col-6 col-d-12">
     <div class="post-image">
-      <img class="lazy" data-src="/assets/img/07.jpg" alt="Do what you can, with what you have, where you are">
+      <img class="lazy" data-src="{{ page.thumbnail-img }}" alt="Do what you can, with what you have, where you are">
     </div>
   </div>
   <div class="col col-6 col-d-12">
