--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,15 +2,17 @@
     <div class="footer__inner">
         <div class="container">
             <div class="row">
-                <div class="col col-5 col-d-12">
+                <div class="col-4"></div>
+                <!-- <div class="col col-5 col-d-12">
                     <div class="footer__author">
                         <div class="footer__author-avatar">
                             <img class="lazy" data-src="/assets/img/01-1a.jpg" alt="Chris Anderson">
                         </div>
                         <h3 class="footer__author-name">Chris Anderson</h3>
-                        <p class="footer__author-bio">I share free coding tutorials, code snippets, and how to get started in coding.</p>
+                        <p class="footer__author-bio">I share free coding tutorials, code snippets, and how to get
+                            started in coding.</p>
                         <div class="social">
-                            <ul class="social__list list-reset">                            
+                            <ul class="social__list list-reset">
                                 <li class="social__item">
                                     <a class="social__link" href="https://instagram.com" target="_blank" rel="noopener"
                                         aria-label=" link"><ion-icon name="logo-instagram"></ion-icon></i></a>
@@ -22,19 +24,44 @@
                                 <li class="social__item">
                                     <a class="social__link" href="https://tiktok.com" target="_blank" rel="noopener"
                                         aria-label=" link"><ion-icon name="logo-tiktok"></ion-icon></a>
+                                        
                                 </li>
                             </ul>
-
                         </div>
                     </div>
-                </div>
-                <div class="col col-6 push-1 col-d-12 push-d-0">
-                    <div class="footer__gallery">
+                </div> -->
+                <!-- <div class="col col-6 push-1 col-d-6 push-d-0"> -->
+                <div class="col-4">
+                    <div class="footer__author">
+                        <div class="footer__author-avatar">
+                            <img class="lazy" data-src="/assets/img/01-1a.jpg" alt="Chris Anderson">
+                        </div>
+                        <h3 class="footer__author-name">Chris Anderson</h3>
+                        <p class="footer__author-bio">I share free coding tutorials, fitness tips, and my travel adventures.</p>
+                        <div class="social">
+                            <ul class="social__list list-reset">
+                                <li class="social__item">
+                                    <a class="social__link" href="https://instagram.com" target="_blank" rel="noopener"
+                                        aria-label=" link"><ion-icon name="logo-instagram"></ion-icon></i></a>
+                                </li>
+                                <li class="social__item">
+                                    <a class="social__link" href="https://youtube.com" target="_blank" rel="noopener"
+                                        aria-label=" link"><ion-icon name="logo-youtube"></ion-icon></a>
+                                </li>
+                                <li class="social__item">
+                                    <a class="social__link" href="https://tiktok.com" target="_blank" rel="noopener"
+                                        aria-label=" link"><ion-icon name="logo-tiktok"></ion-icon></a>
+                                        
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- <div class="footer__gallery">
                         <h3 class="footer__gallery-title">Gallery</h3>
                         <div class="gallery-footer">
                             <div class="gallery" style="grid-template-columns: repeat(3, auto);">
-                                <div class="gallery__image">
-                                    <img src="/assets/img/100.jpg" alt="Rest" loading="lazy">
+                                 <div class="gallery__image">
+                                    <img src="/assets/img/santorini1.png" alt="Rest" loading="lazy">
                                 </div>
                                 <div class="gallery__image">
                                     <img src="/assets/img/101.jpg" alt="Lifestyle" loading="lazy">
@@ -62,8 +89,9 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
+                    </div> -->
+                </div> 
+                <div class="col-4"></div>
             </div>
         </div>
     </div>
