about text change

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,7 +37,7 @@
                             <img class="lazy" data-src="/assets/img/01-1a.jpg" alt="Chris Anderson">
                         </div>
                         <h3 class="footer__author-name">Chris Anderson</h3>
-                        <p class="footer__author-bio">I share free coding tutorials, fitness tips, and my travel adventures.</p>
+                        <p class="footer__author-bio">I'm a software engineer sharing what I've learned in tech through coding tutorials and how-to guides.</p>
                         <div class="social">
                             <ul class="social__list list-reset">
                                 <li class="social__item">
@@ -47,12 +47,12 @@
                                 <li class="social__item">
                                     <a class="social__link" href="https://youtube.com" target="_blank" rel="noopener"
                                         aria-label=" link"><ion-icon name="logo-youtube"></ion-icon></a>
-                                </li>
+                                <!-- </li>
                                 <li class="social__item">
                                     <a class="social__link" href="https://tiktok.com" target="_blank" rel="noopener"
                                         aria-label=" link"><ion-icon name="logo-tiktok"></ion-icon></a>
                                         
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
                     </div>
