--- a/_includes/head.html
+++ b/_includes/head.html
@@ -50,3 +50,12 @@
     <script src="/js/common.js"></script> -->
     <link rel="stylesheet" href="/assets/css/main.css" />
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M0CQ0R5JXL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-M0CQ0R5JXL');
+</script>
