--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,11 +41,11 @@
                         <div class="social">
                             <ul class="social__list list-reset">
                                 <li class="social__item">
-                                    <a class="social__link" href="https://instagram.com" target="_blank" rel="noopener"
+                                    <a class="social__link" href="https://www.instagram.com/chrisanderson.co/" target="_blank" rel="noopener"
                                         aria-label=" link"><ion-icon name="logo-instagram"></ion-icon></i></a>
                                 </li>
                                 <li class="social__item">
-                                    <a class="social__link" href="https://youtube.com" target="_blank" rel="noopener"
+                                    <a class="social__link" href="https://www.youtube.com/@chrisandersonco" target="_blank" rel="noopener"
                                         aria-label=" link"><ion-icon name="logo-youtube"></ion-icon></a>
                                 <!-- </li>
                                 <li class="social__item">
