--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -47,12 +47,12 @@
                                 <li class="social__item">
                                     <a class="social__link" href="https://www.youtube.com/@chrisandersonco" target="_blank" rel="noopener"
                                         aria-label=" link"><ion-icon name="logo-youtube"></ion-icon></a>
-                                <!-- </li>
+                                </li>
                                 <li class="social__item">
-                                    <a class="social__link" href="https://tiktok.com" target="_blank" rel="noopener"
-                                        aria-label=" link"><ion-icon name="logo-tiktok"></ion-icon></a>
+                                    <a class="social__link" href="https://facebook.com" target="_blank" rel="noopener"
+                                        aria-label=" link"><ion-icon name="logo-facebook"></ion-icon></a>
                                         
-                                </li> -->
+                                </li>
                             </ul>
                         </div>
                     </div>
