Update footer and remove test post

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,17 +40,17 @@
                         <p class="footer__author-bio">I'm a software engineer sharing what I've learned in tech through coding tutorials and how-to guides.</p>
                         <div class="social">
                             <ul class="social__list list-reset">
-                                <li class="social__item">
+                                <!-- <li class="social__item">
                                     <a class="social__link" href="https://www.instagram.com/chrisanderson.co/" target="_blank" rel="noopener"
-                                        aria-label=" link"><ion-icon name="logo-instagram"></ion-icon></i></a>
+                                        aria-label=" link"><ion-icon name="golf"></ion-icon></i></a>
                                 </li>
                                 <li class="social__item">
                                     <a class="social__link" href="https://www.youtube.com/@chrisandersonco" target="_blank" rel="noopener"
                                         aria-label=" link"><ion-icon name="logo-youtube"></ion-icon></a>
-                                </li>
+                                </li> -->
                                 <li class="social__item">
                                     <a class="social__link" href="https://facebook.com" target="_blank" rel="noopener"
-                                        aria-label=" link"><ion-icon name="logo-facebook"></ion-icon></a>
+                                        aria-label=" link"><ion-icon name="logo-linkedin"></ion-icon></a>
                                         
                                 </li>
                             </ul>
@@ -100,7 +100,7 @@
             <div class="row">
                 <div class="col col-12">
                     <div class="footer__info-box">
-                        <div class="copyright">2023 &copy; <a href="/">chrisanderson.co</a></div>
+                        <div class="copyright">2024 &copy; <a href="/">chrisanderson.co</a></div>
                         <div class="top" title="Top"><i class="ion ion-ios-arrow-up"></i></div>
                     </div>
                 </div>
