Added a golf section

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,9 @@
                             <li class="nav__item">
                                 <a href="/blog/" class="nav__link">Blog</a>
                             </li>
+                            <li class="nav__item">
+                                <a href="/golf/" class="nav__link">Golf</a>
+                            </li>
                             <li class="nav__item nav__item-icon">
                                 <div class="toggle-theme">
                                     <div class="toggle-moon" title="Enable dark mode"><i class="ion ion-ios-moon"></i>
